--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,15 @@
 .container {
+  border: 1px solid blue;
+  width: 90vh;
   display: grid;
   grid-template-rows: repeat(9, 10vh);
   grid-template-columns: repeat(9, 10vh);
 }
 
 .item {
-  border: 1px solid blue;
+  background: url("../images/lines.png");
+  width: 10vh;
+  height: 10vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
