--- a/builds/development/css/main.css
+++ b/builds/development/css/main.css
@@ -15,22 +15,38 @@ body {
 #scoreblack {
   display: inline-block;
   line-height: 10vh;
-  width: 49%;
+  width: 40%;
   height: 10vh;
   text-align: left;
   font-size: 10vh;
-  background-color: #fff;
+  background-color: #aaa;
   color: #444;
+}
+
+#btn {
+  display: inline-block;
+  line-height: 10vh;
+  width: 19.25%;
+  height: 10vh;
+  text-align: center;
+  font-size: 9.20vh;
+  background-color: grey;
+  color: #000;
+  border-radius: 5px;
+}
+#btn a {
+  text-decoration: none;
+  color: #000;
 }
 
 #scorewhite {
   display: inline-block;
   line-height: 10vh;
-  width: 49%;
+  width: 40%;
   height: 10vh;
   text-align: right;
   font-size: 10vh;
-  background-color: #444;
+  background-color: #aaa;
   color: #fff;
 }
 
