--- a/components/sass/main.scss
+++ b/components/sass/main.scss
@@ -16,12 +16,32 @@ body{
   display: inline-block;
   line-height: 10vh;
   // padding-left: 1em;
-  width: 49%;
+  width: 40%;
   height: 10vh;
   text-align: left;
   font-size: 10vh;
-  background-color: #fff;
+  background-color: #aaa;
   color: #444;
+  // width: 50vw;
+  // display: grid;
+}
+
+#btn{  
+  display: inline-block;
+  line-height: 10vh;
+  // padding-left: 1em;
+  width: 19.25%;
+  height: 10vh;
+  text-align: center;
+  font-size: 9.20vh;
+  background-color: grey;
+  color: #000;
+  border-radius: 5px;
+
+  a{
+    text-decoration: none;
+    color: #000;
+  }
   // width: 50vw;
   // display: grid;
 }
@@ -29,11 +49,11 @@ body{
 #scorewhite{  
   display: inline-block;
   line-height: 10vh;
-  width: 49%;
+  width: 40%;
   height: 10vh;
   text-align: right;
   font-size: 10vh;
-  background-color: #444;
+  background-color: #aaa;
   color: #fff;
   // width: 50vw;
   // display: grid;
